@@ -1,6 +1,8 @@
 Copyright (C) 2022 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
 @%@~LICENSE:MIT~@%@
 
+saw_072822_3 - Add Windows support to mouse test script.
+
 saw_072822_2 - Add a mouse test script.
 
 saw_072822_1 - Initial commit (just termio.py from my vipy project).
